--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@expo-google-fonts/raleway": "^0.2.2",
+    "@mobile-reality/react-native-select-pro": "^1.10.0",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
+    "expo-checkbox": "~2.1.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.3",
@@ -23,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
